--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "react-icons": "^4.7.1"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "ethers": "^5.0.0",
     "vite": "^4.0.0"
   }
 }
